--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<div class="lun">
 					</div>
 				</div>
-				<p>毕竟不是作家,写不出那么好的文章。--因为没有丰富阅历和经验！</p>
+				<p style="font-size:12px">他说：“就像赛跑一样，这个接力棒我已经拿了这么远,我的目标是把这个接力棒交给儿子。”</Br>希望自己尽快有能力接棒，长大成人！</p>
 			</div>
 			<div id="model">
 				<div class="site">
