--- a/aboutme.html
+++ b/aboutme.html
@@ -100,7 +100,7 @@
 				<a href="index.html">首页</a>
 				<a href="aboutme.html" class="active">关于ME</a>
 				<a href="study.html">学无止境</a>
-				<a href="book.html">好书推荐</a>
+				<a href="book.html"></a>
 				<a href="suiyu.html">时言碎语</a>
 				<a href="lianxi.html">联系</a>
 			</div>
