--- a/lianxi.html
+++ b/lianxi.html
@@ -22,7 +22,7 @@
 				<a href="index.html">首页</a>
 				<a href="aboutme.html">关于ME</a>
 				<a href="study.html">学无止境</a>
-				<a href="book.html">好书推荐</a>
+				<a href="./event/index.html">响应式简历</a>
 				<a href="suiyu.html">时言碎语</a>
 				<a href="lianxi.html" class="active">联系</a>
 			</div>
