--- a/daduzi/HTML/homePage.html
+++ b/daduzi/HTML/homePage.html
@@ -8,9 +8,6 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-		<!--[if lt IE9]>
-		<script src=”http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js”></script>
-		<![endif]-->
 	</head>
 	<body>
 		<!-- 头部 王涛 -->
@@ -19,7 +16,7 @@
 				<img src="../images/logo.png" alt="" class="img-logo">
 				<span class="top-s1">大肚子桶业（北京）有限公司</span>
 				<img src="../images/phone.png" alt="" class="img-phone">
-				<p class="font-color">24小时热线 : 18210686068</p>
+				<p class="font2-color">24小时热线 : 18210686068</p>
 				<span class="top-s2" style="margin-left: 105px;">设为首页</span><span class="top-s2">|</span><span class="top-s2">加入收藏</span>
 			</div>
 			<div class="nav bg-color">
@@ -90,25 +87,23 @@
 
 		<!-- 四大优势  杜涵 -->
 		<div class="superiority">
-			<div class="sup_nav">
-				<div class="sup_left"></div>	
-				<div class="sup_right">
-					<span class="sp1">四大优势</span>
-					<span class="sp2">Safe to choose</span>
-					<span class="sp3">让您放心选择我们</span>
-					<div class="delta"></div><img src="../images/sup_text.png" class="sup_text1">	
-				</div>		
-			</div>	
+			<div id="nav_bg">
+				<div class="grey_bg"></div>
+				<div id="green_bg"></div>
+				<div class="sup_nav">
+					<div class="sup_left"></div>	
+					<div class="sup_right">
+						<span class="sp1">四大优势</span>
+						<span class="sp2">Safe to choose</span>
+						<span class="sp3">让您放心选择我们</span>
+						<div class="delta"></div><img src="../images/sup_text.png" class="sup_text1">	
+					</div>		
+				</div>	
+			</div>
 			<div class="sup_box">
 				<li class="sup_row">
 					<div class="sup_photo">
-						<div class="sup_graph sup_graph3 sup_gl"><img src="../images/sup9.png"></div>
-						<div class="sup_graph sup_graph1"><img src="../images/sup_4.png"></div>
-						<div class="sup_graph sup_graph2"><img src="../images/sup2.png"></div>
-						<div class="sup_graph sup_graph4 sup_gl"><img src="../images/sup10.png"></div>
-						<section class="sup_shit1 sup_s"></section>
-						<section class="sup_shit2 sup_b"></section>
-						<section class="sup_shit3 sup_s"></section>
+						<img src="../images/sup1.png">
 					</div>	
 					<div class="sup_text sup_tr">
 						<div>
@@ -159,12 +154,7 @@
 						<a href="javascript:void(0)"><h3>大肚子桶业不做一锤子买卖，深知做好售后维护好客户是企业可持续发展的基础。.</h3></a>
 					</div>
 					<div class="sup_photo2">
-						<div class="sup_graph sup_graph5 sup_gl"><img src="../images/sup5.png"></div>
-						<div class="sup_graph sup_graph6 sup_gl sup_x"><img src="../images/sup6.png"></div>
-						<div class="sup_graph sup_graph7 sup_gl sup_x"><img src="../images/sup7.png"></div>
-						<div class="sup_graph sup_graph8 sup_gl sup_x"><img src="../images/sup8.jpg"></div>
-						<section class="sup_shit4 sup_b"></section>
-						<section class="sup_shit5 sup_b"></section>
+						<img src="../images/sup2.png">
 					</div>	
 				</li>
 			</div>
@@ -450,7 +440,9 @@
 					<h3>135522216911</h3>
 				</div>
 				<div class="btm-d3">
-					<img src="../images/erweima.png" alt="">
+					<div class="btm-img">
+						<img src="../images/erweima.png" alt="">
+					</div>
 					<span>关注微信 扫一扫</span>
 				</div>
 			</div>
