--- a/daduzi/HTML/success.html
+++ b/daduzi/HTML/success.html
@@ -8,9 +8,6 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-	<!--[if lt IE9]>
-	<script src=”http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js”></script>
-	<![endif]-->
 </head>
 <body>
 	<!-- 头部 王涛 -->
@@ -19,7 +16,7 @@
 			<img src="../images/logo.png" alt="" class="img-logo">
 			<span class="top-s1">大肚子桶业（北京）有限公司</span>
 			<img src="../images/phone.png" alt="" class="img-phone">
-			<p class="font-color">24小时热线 : 18210686068</p>
+			<p class="font2-color">24小时热线 : 18210686068</p>
 			<span class="top-s2" style="margin-left: 105px;">设为首页</span><span class="top-s2">|</span><span class="top-s2">加入收藏</span>
 		</div>
 		<div class="nav bg-color">
