--- a/event/index.html
+++ b/event/index.html
@@ -3,9 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Your Landing Page Title</title>
-
-<!--pageMeta-->
+<title>King Jian</title>
 
 <!-- Loading Bootstrap -->
 <link href="css/bootstrap.css" rel="stylesheet">
@@ -69,10 +67,10 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<div class="slogan">
-						<h1 class="giant-title">10 - 14 JUNE<br>
-							<b>Best Event Ever</b></h1>
-						<p>No fluff. Nothing should lead the visitor away from the main essence of website.<br>
-							There must be just important information.</p>
+						<h1 class="giant-title"><span>10 - 14 JUNE</span><br>
+							<b>来到上海的第*天</b></h1>
+						<p>2016的7月10日，一个叫王健的青年来到了上海，他一无所有，他懵懂无知。他有的，只是一颗年轻的心，充满着一切！<br>
+							HELLOW WORLD!</p>
 					</div>
 					<a class="btn btn-lg btn-default-white goto" href="#content-half-left"><i class="icon icon-mouse"></i> View more</a> </div>
 			</div>
