--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 						<a href="demo.计算器-正则/">三、正则初探--计算器</a>
 						<a href="demo.angular购物车/">四、mvc-angular之购物车</a>
 						<a href="demo.创想家/index.html">五、酷炫css网页--创想家</a>
-						<a href="#">六...</a>
-						<a href="#">七...</a>
+						<a href="#">六、canvas实现画图</a>
+						<a href="./boot-lara/">七、bootsrap-lara</a>
 					</div>
 				</div>
 			</div>
