--- a/event/index.html
+++ b/event/index.html
@@ -77,14 +77,77 @@
 		</div>
 		<div class="video-bg"></div>
 	</header>
-	
+	<!-- SHEDULE BLOCK -->
+	<section id="shedule" class="cover-bg" style="background-image:url(images/bg5.jpg);">
+		<div class="container">
+			<div class="row text-center">
+				<h2 class="title">Shedule</h2>
+				<p class="sep-bottom">In our work we try to use only the most modern, convenient and interesting solutions.<br>
+				We want the template you downloaded look unique and new for such a long time as it is possible.</p>
+			</div>
+			<div class="panel">
+				<a class="panel-heading" data-toggle="collapse" href="#collapseOne"><span class="editContent">个人信息</span></a>
+				<div id="collapseOne" class="panel-collapse collapse in">
+					<div class="panel-body">
+						<ul>
+							<li>姓名：王建</li>
+							<li>年龄：21</li>
+							<li><span>男</span>~~<span>1995年1月生</span>~~<span>户籍：安徽蚌埠</span>~~<span>现居于：上海</span>~~<span>毕业院校：安徽理工</span></li>
+							<li>身份证 ：340302199501200819</li>
+							<li>手机 ：13135547739</li>
+							<li>qq : 2929674714</li>
+							<li>E-mail : 2929674714@qq.com</li>
+							<li>职业技能~~精通:html,css,js,jq,bootstrap;熟悉:angular,react,react native,php,mysql</li>
+							<li>职业规划：全栈工程师</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="panel">
+				<a class="panel-heading collapsed" data-toggle="collapse" href="#collapseThree"><span class="editContent">实习经历</span></a>
+				<div id="collapseThree" class="panel-collapse collapse">
+					<div class="panel-body">
+						<ul>
+							<li><strong>丰富的实习经历，良好的吃苦和抗压能力</strong></li>
+							<li>在已经过去的三年大学时光里，我在课余时间里积极参加各种实习，兼职。在校，我发过不下百次的传单，送过一个学期的外卖。暑期节假，我更是体会过很多职业的经历，如酒店的服务员，程序员实习生等等。
+								尽管没有什么出彩的实习经历，但是在各种高强度的体力工作中，我都能坚持下来。没有优点的我可以自豪的说出：“我能吃苦，能吃苦，能吃苦！”</li>
+			
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="panel">
+				<a class="panel-heading collapsed" data-toggle="collapse" href="#collapseTwo"><span class="editContent">自我评价</span></a>
+				<div id="collapseTwo" class="panel-collapse collapse">
+					<div class="panel-body">
+						<ul>
+							<li>总的来说，对自己的评价还是中庸朝上一点吧。虽然相对于身边很多打游戏和爱玩的同学来说，自己还算蛮勤奋的，手机电脑啊什么的都是自己打工赚来的，而且对未来也有所规划，想要成为一名前端大牛，也在为此而努力。但是面对很多挑战却没有勇气迈出，如大学第一次选班长，我很想上台参加，却最终放弃，还有很多像这样的例子，感觉还是蛮遗憾的。然后性格是有点内向，不太喜欢和陌生人说话，然后脾气就是太好了，对事来说，就是能力不足，对人来说，无法坦率，自然地相处。希望在以后的职场中改善自己。</li>				
+						</ul>
+					</div>
+				</div>
+			</div>
+			
+			<div class="panel">
+				<a class="panel-heading collapsed" data-toggle="collapse" href="#collapseFour"><span class="editContent">个人荣誉</span></a>
+				<div id="collapseFour" class="panel-collapse collapse">
+					<div class="panel-body">
+						<ol>
+							<li>校三好学生</li>
+							<li>全国青少年科技大赛安徽省3等奖</li>
+							<li>大学任班心里委员</li>
+						</ol>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<!-- CONTENT HALF LEFT BLOCK -->
 	<section id="content-half-left" class="no-sep">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4 col-md-5">
-					<h2>Experience</h2>
-					<h4 class="sub-title">Reason 1</h4>
+					<h2>我的家乡</h2>
+					<h4 class="sub-title">安徽蚌埠</h4>
 					<p>In our work we try to use only the most modern, convenient and interesting solutions. We want the template you downloaded look unique and new for such a long time as it is possible. </p>
 				</div>
 			</div>
@@ -161,89 +224,7 @@
 		</div>
 	</section>
 	
-	<!-- SHEDULE BLOCK -->
-	<section id="shedule" class="cover-bg" style="background-image:url(images/bg5.jpg);">
-		<div class="container">
-			<div class="row text-center">
-				<h2 class="title">Shedule</h2>
-				<p class="sep-bottom">In our work we try to use only the most modern, convenient and interesting solutions.<br>
-				We want the template you downloaded look unique and new for such a long time as it is possible.</p>
-			</div>
-			<div class="panel">
-				<a class="panel-heading" data-toggle="collapse" href="#collapseOne"><span class="editContent">DAY 1</span></a>
-				<div id="collapseOne" class="panel-collapse collapse in">
-					<div class="panel-body">
-						<ul>
-							<li><strong>9:00 - Grand Openning</strong></li>
-							<li>10:00 - New Artist from the UK</li>
-							<li>11:00 - Your Favorite Rock Band</li>
-							<li>12:00 - Best Pop Singer</li>
-							<li><strong>13:00 - Tasty Dinner</strong></li>
-							<li>14:00 - Funny Competition</li>
-							<li>16:00 - Meditation with Master</li>
-							<li>17:00 - Local Artists</li>
-							<li>19:00 - Rock Band from Norway</li>
-							<li><strong>21:00 - Firework</strong></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="panel">
-				<a class="panel-heading collapsed" data-toggle="collapse" href="#collapseTwo"><span class="editContent">DAY 2</span></a>
-				<div id="collapseTwo" class="panel-collapse collapse">
-					<div class="panel-body">
-						<ul>
-							<li>10:00 - New Artist from the UK</li>
-							<li>11:00 - Your Favorite Rock Band</li>
-							<li>12:00 - Best Pop Singer</li>
-							<li><strong>13:00 - Tasty Dinner</strong></li>
-							<li>14:00 - Funny Competition</li>
-							<li>16:00 - Meditation with Master</li>
-							<li>17:00 - Local Artists</li>
-							<li>19:00 - Rock Band from Norway</li>
-							<li><strong>21:00 - Firework</strong></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="panel">
-				<a class="panel-heading collapsed" data-toggle="collapse" href="#collapseThree"><span class="editContent">DAY 3</span></a>
-				<div id="collapseThree" class="panel-collapse collapse">
-					<div class="panel-body">
-						<ul>
-							<li>10:00 - New Artist from the UK</li>
-							<li>11:00 - Your Favorite Rock Band</li>
-							<li>12:00 - Best Pop Singer</li>
-							<li><strong>13:00 - Tasty Dinner</strong></li>
-							<li>14:00 - Funny Competition</li>
-							<li>16:00 - Meditation with Master</li>
-							<li>17:00 - Local Artists</li>
-							<li>19:00 - Rock Band from Norway</li>
-							<li><strong>21:00 - Firework</strong></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="panel">
-				<a class="panel-heading collapsed" data-toggle="collapse" href="#collapseFour"><span class="editContent">LAST DAY</span></a>
-				<div id="collapseFour" class="panel-collapse collapse">
-					<div class="panel-body">
-						<ul>
-							<li>10:00 - New Artist from the UK</li>
-							<li>11:00 - Your Favorite Rock Band</li>
-							<li>12:00 - Best Pop Singer</li>
-							<li><strong>13:00 - Tasty Dinner</strong></li>
-							<li>14:00 - Funny Competition</li>
-							<li>16:00 - Meditation with Master</li>
-							<li>17:00 - Local Artists</li>
-							<li>19:00 - Rock Band from Norway</li>
-							<li><strong>21:00 - Firework</strong></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+	
 	
 	<!-- PRICING TABLE 3COL BLOCK -->
 	<section id="price-3col" class="text-center bg-color3">
