--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 	<head>
 		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>King Jian</title>
 		<link href="css/impress-demo.css" rel="stylesheet" />
 		<script src="data.js" type="text/javascript" charset="utf-8"></script>
