--- a/event/index.html
+++ b/event/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>King Jian</title>
 
 <!-- Loading Bootstrap -->
@@ -81,9 +81,9 @@
 	<section id="shedule" class="cover-bg" style="background-image:url(images/bg5.jpg);">
 		<div class="container">
 			<div class="row text-center">
-				<h2 class="title">Shedule</h2>
-				<p class="sep-bottom">In our work we try to use only the most modern, convenient and interesting solutions.<br>
-				We want the template you downloaded look unique and new for such a long time as it is possible.</p>
+				<h2 class="title">个人简介</h2>
+				<p class="sep-bottom">渴望进步！<br>
+					渴望出彩！</p>
 			</div>
 			<div class="panel">
 				<a class="panel-heading" data-toggle="collapse" href="#collapseOne"><span class="editContent">个人信息</span></a>
@@ -148,7 +148,10 @@
 				<div class="col-lg-4 col-md-5">
 					<h2>我的家乡</h2>
 					<h4 class="sub-title">安徽蚌埠</h4>
-					<p>In our work we try to use only the most modern, convenient and interesting solutions. We want the template you downloaded look unique and new for such a long time as it is possible. </p>
+					<p>淮河岸边的明珠，一座不平凡的小城。</br>
+						依河而居，自有一番钟秀灵气。</br>
+						联通南北，人杰汇集之处。
+					</p>
 				</div>
 			</div>
 		</div>
@@ -160,9 +163,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4 col-lg-offset-8 col-md-5 col-md-offset-7">
-					<h2>Free Wi-Fi</h2>
-					<h4 class="sub-title">Reason 2</h4>
-					<p>In our work we try to use only the most modern, convenient and interesting solutions. We want the template you downloaded look unique and new for such a long time as it is possible. </p>
+					<h2>我的成长</h2>
+					<h4 class="sub-title">教育经历</h4>
+					<p><br />蚌埠师范附小<br />蚌埠第九中学<br /> 安徽理工大学</p>
 				</div>
 			</div>
 		</div>
