--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
+		<meta name="viewport" content="width=device-width,target-densitydpi=high-dpi,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 		<title>King Jian</title>
 		<link href="css/impress-demo.css" rel="stylesheet" />
 		<script src="data.js" type="text/javascript" charset="utf-8"></script>
