--- a/event/index.html
+++ b/event/index.html
@@ -43,17 +43,15 @@
 				<div class="collapse navbar-collapse navMenuCollapse">
 					<div class="col-md-5 text-right">
 						<ul class="nav">
-							<li><a href="#content-half-left">About</a></li>
-							<li><a href="#map-half-left">Location</a></li>
-							<li><a href="#team-circle">Headliners</a></li>
+							<li><a href="#intro-video-background">首页</a></li>
+							<li><a href="#shedule">简介</a></li>
 						</ul>
 					</div>
 					<div class="col-md-2 text-center hidden-sm hidden-xs"><a class="navbar-brand goto" href="#intro-video-background"><img src="./images/logo.png" height="25" alt="Your logo"></a></div>
 					<div class="col-md-5 text-left">
 						<ul class="nav">
-							<li><a href="#shedule">Shedule</a></li>
-							<li><a href="#price-3col">Prices</a></li>
-							<li><a href="#contact-full">Reserve</a></li>
+							<li><a href="#content-half-left">成长</a></li>
+							<li><a href="#contact-full">留言</a></li>
 						</ul>
 					</div>
 				</div>
@@ -155,7 +153,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="container-half container-half-right cover-bg" style="background-image: url(images/bg4.jpg);"></div>
+		<div class="container-half container-half-right cover-bg" style="background-image: url(images/bengbu.jpg);"></div>
 	</section>
 	
 	<!-- CONTENT HALF RIGHT BLOCK -->
@@ -169,29 +167,14 @@
 				</div>
 			</div>
 		</div>
-		<div class="container-half container-half-left cover-bg" style="background-image: url(images/bg22.jpg);"></div>
+		<div class="container-half container-half-left cover-bg" style="background-image: url(images/1477821506032.jpeg);"></div>
 	</section>
 	
-	<!-- MAP HALF LEFT BLOCK -->
-	<section id="map-half-left" class="cover-bg" style="background-image: url(images/bg24.jpg);">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4">
-					<h2 class="title">Location</h2>	
-					<h3 class="sep-bottom"><i class="icon-pointer"></i> 14 Newell Ave.</h3>				
-					<p>In our work we try to use only the most modern, convenient and interesting solutions. We want the template you downloaded look unique and new for such a long time as it is possible. </p>
-				</div>
-				<div class="col-md-6 col-md-offset-2">
-					
-				</div>
-			</div>
-		</div>
-	</section>
 	
 	<!-- TEAM CIRCLE BLOCK -->
-	<section id="team-circle" class="text-center team-block" >
+	<!--<section id="team-circle" class="text-center team-block" >
 		<div class="container">
-			<h2 class="title">Headliners</h2>
+			<h2 class="title">123</h2>
 			<div class="row">
 				<div class="col-sm-4"> <img src="images/photo-team-1.jpg" class="img-circle screen" alt="Team 1" width="250">
 					<h3 class="name">John Doe</h3>
@@ -225,12 +208,12 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section>-->
 	
 	
 	
 	<!-- PRICING TABLE 3COL BLOCK -->
-	<section id="price-3col" class="text-center bg-color3">
+	<!--<section id="price-3col" class="text-center bg-color3">
 		<div class="container">
 			<h2 class="title">Choose Your Ticket</h2>
 			<p class="sep-bottom">In our work we try to use only the most modern, convenient and interesting solutions.<br>
@@ -278,10 +261,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section>-->
 	
 	<!-- CLIENTS GRID BLOCK -->
-	<section id="clients-grid" class="clients-block text-center cover-bg dark-bg bg-color1" style="background-image:url(images/bg23.jpg)">
+	<!--<section id="clients-grid" class="clients-block text-center cover-bg dark-bg bg-color1" style="background-image:url(images/bg23.jpg)">
 		<div class="container">
 			<h2 class="title">Sponsors</h2>
 			<p class="sep-bottom desc-text">In our work we try to use only the most modern, convenient and interesting solutions.<br>
@@ -305,13 +288,12 @@
 				<div class="col-sm-3"><img src="images/clients/logo4.png" alt="logo"/></div>
 			</div>
 		</div>
-	</section>
+	</section>-->
 	
 	<!-- CONTACT FULL BLOCK -->
 	<section id="contact-full" class="text-center">
 		<div class="container">
-			<h2 class="title">Reserve a Place</h2>
-			<p class="sep-bottom">In our work we try to use only the most modern, convenient and interesting solutions.<br>We want the template you downloaded look unique and new for such a long time as it is possible.</p>
+			<h2 class="title">欢迎您给我留言</h2>
 			<form action="scripts/contact.php" role="form"  id="contact_form">
 				<div class="form-group">
 					<input type="text" class="form-control" id="contact_name" placeholder="Full Name" name="name">
@@ -320,29 +302,14 @@
 					<input type="email" class="form-control" id="contact_email" placeholder="Email Address" name="email">
 				</div>
 				<div class="form-group">
-					<textarea class="form-control" rows="3" placeholder="Your Ticket Type" id="contact_message" name="message"></textarea>
+					<textarea class="form-control" rows="3" placeholder="留言" id="contact_message" name="message"></textarea>
 				</div>
-				<button type="submit" id="contact_submit" data-loading-text="&bull;&bull;&bull;" class="btn btn-lg btn-block btn-primary"><i class="icon icon-note"></i> Reserve</button>
+				<button type="submit" id="contact_submit" data-loading-text="&bull;&bull;&bull;" class="btn btn-lg btn-block btn-primary"><i class="icon icon-note"></i>写信给我</button>
 			</form>
 		</div>
 	</section>
 	
 	<!-- FOOTER CENTER -->
-	<footer id="footer-center" class="text-center bg-color1 dark-bg">
-		<div class="container"> 
-			<ul class="soc-list">
-				<li><a href="#" target="_blank"><i class="icon icon-twitter2"></i></a></li>
-				<li><a href="#" target="_blank"><i class="icon icon-facebook2"></i></a></li>
-				<li><a href="#" target="_blank"><i class="icon icon-dribbble2"></i></a></li>
-				<li><a href="#" target="_blank"><i class="icon icon-behance"></i></a></li>
-				<li><a href="#" target="_blank"><i class="icon icon-googleplus2"></i></a></li>
-				<li><a href="#" target="_blank"><i class="icon icon-linkedin2"></i></a></li>
-				<li><a href="#" target="_blank"><i class="icon icon-instagram"></i></a></li>
-				<li><a href="#" target="_blank"><i class="icon icon-pinterest"></i></a></li>
-				<li><a href="#" target="_blank"><i class="icon icon-flickr"></i></a></li>
-			</ul>
-		</div>
-	</footer>
 </div>
 <!-- /#wrap --> 
 
