--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 		<script src="angularjs.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			var articalController = function($scope) {
-				$scope.artical = artical
+				$scope.artical = artical;
 			}
 		</script>
 	</body>
