--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body>
 		<div id="head">
 			<div class="head-t">
-				<p><i>惟正己可以化人，</p>
+				<p><i>惟正己可以化人，</i></p>
 			<p><i>惟尽己可以服人。</i></p>
 				<p><span>---By:&nbsp;<span style="color: red;">wj</span></span>
 				</p>
