--- a/study.html
+++ b/study.html
@@ -33,52 +33,7 @@
 			<p>
 				<a href="index.html">首页</a><span> >>> Stydy Is Never Over</span><em style="display: inline;">只有两种人最具有吸引力，一种是无所不知的人，一种是一无所知的人。</em></p>
 		</div>
-		<div class="wrap" ng-app>
-			<div id="artical" class="main">
-				<ul ng-controller="articalController1">
-					<li ng-repeat="item in artical">
-						<div class="img">
-							<img src={{'img/'+item.img}}>
-						</div>
-						<div class="text">
-							<h2>{{item.title}}</h2>
-							<p style="white-space: nowrap;text-overflow: ellipsis;">
-								<a href="aboutme.html" class="wj">王健</a><span>关键字:</span>
-								<a href="#">{{item.key}}</a>
-							</p>
-							<p>前言：还记得刚接触前端的时候，对于“前端构建工具”这个词一脸茫然。并不知道使用它，能为我们做些什么事情。 以及它能帮我们，解决什么样的问题？ 下面就跟大家一起来学习下：目前比较火的前端构建工具“Webpack” 一、什么是Webpack Webpak在官方的定</p>
-						</div>
-						<a href="{{'artical.html?'+item.href}}"></a>
-					</li>
-				</ul>
-			</div>
-			<div class="side">
-				<p class="blue_line">站内搜索</p>
-				<div class="seach">
-					<input type="text" name="" id="" value="" placeholder="请输入搜索内容" />
-					<a href="#"></a>
-				</div>
-				<div class="new_pin">
-					<p>最新评论</p>
-					<!-- 多说最新评论 start -->
-					<div class="ds-recent-comments" data-num-items="8" data-show-avatars="1" data-show-time="1" data-show-title="1" data-show-admin="1" data-excerpt-length="70"></div>
-					<script type="text/javascript">
-						var duoshuoQuery = {
-							short_name: "wj200819"
-						};
-						(function() {
-							var ds = document.createElement('script');
-							ds.type = 'text/javascript';
-							ds.async = true;
-							ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
-							ds.charset = 'UTF-8';
-							(document.getElementsByTagName('head')[0] ||
-								document.getElementsByTagName('body')[0]).appendChild(ds);
-						})();
-					</script>
-				</div>
-			</div>
-		</div>
+		<iframe src="blog/index.html"></iframe>
 		<div id="foot" style="width:1000px;margin: 0px auto;height: 100px;margin-top: 40px;">
 			<p>
 				<a href="#"></a>
