--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 									<a href="aboutme.html" class="wj">王健</a><span>关键字:</span>
 									<a href="#">{{item.key}}</a>
 								</p>
-								<p>前言：还记得刚接触前端的时候，对于“前端构建工具”这个词一脸茫然。并不知道使用它，能为我们做些什么事情。 以及它能帮我们，解决什么样的问题？ 下面就跟大家一起来学习下：目前比较火的前端构建工具“Webpack” 一、什么是Webpack Webpak在官方的定</p>
+								<p>{{item.detail}}</p>
 							</div>
 							<a href="{{'artical.html?'+item.href}}"></a>
 						</li>
