--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<a href="demo.angular购物车/">四、mvc-angular之购物车</a>
 						<a href="jiugongge/index.html">五、简单小游戏-九宫格</a>
 						<a href="./canvas/can.html">六、canvas实现酷炫效果</a>
-						<a href="./boot-lara/">七、bootsrap-lara</a>
+						<a href="./xiaoyang/">七、bootsrap-lara</a>
 					</div>
 				</div>
 			</div>
