--- a/jiugongge/index.html
+++ b/jiugongge/index.html
@@ -79,7 +79,7 @@
 <button class="btnAgain">重新开始</button>
 <div class="bushu">一共用了<span>0</span>步</div>
 </body>
-<script src="http://cdn.staticfile.org/jquery/3.1.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="../jquery-2.1.0.js" type="text/javascript" charset="utf-8"></script>
 <script>
 	$(function  () {
 		function random (x,y) {
