--- a/event/index.html
+++ b/event/index.html
@@ -153,7 +153,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="container-half container-half-right cover-bg" style="background-image: url(images/bengbu.jpg);"></div>
+		<div class="container-half container-half-right cover-bg" style="background-image: url(images/bg22.jpg);"></div>
 	</section>
 	
 	<!-- CONTENT HALF RIGHT BLOCK -->
