--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 				<div class="dom">
 					<p>DOM展示<span>&nbsp;&nbsp;slide to show</span></p>
 					<div>
-						<a href="http://10.80.13.241/">一、php实例瀑布流</a>
+						<a href="./forRemote/html/index.html">一、凭远</a>
 						<a href="demo.简易照片墙/">二、拖拽事件高级应-用照片墙</a>
 						<a href="demo.计算器-正则/">三、正则初探--计算器</a>
 						<a href="demo.angular购物车/">四、mvc-angular之购物车</a>
 						<a href="jiugongge/index.html">五、简单小游戏-九宫格</a>
 						<a href="./canvas/can.html">六、canvas实现酷炫效果</a>
-						<a href="./xiaoyang/">七、bootsrap-lara</a>
+						<a href="./xiaoyang/">七、小样游戏</a>
 					</div>
 				</div>
 			</div>
